--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: content-box;
     margin: 0;
@@ -6,15 +5,12 @@
     font-family: Rubik, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif !important;
 }
 
-html,body {
+html,
+body {
     --main-bg-color: #f8f8f8;
     background-color: var(--main-bg-color) !important;
 }
 
-body {
-    padding: 20px !important;
-}
-
-.linkColor {
-    color: #6f5cf1
+a {
+    text-decoration: none !important;
 }
